#ifndef PRIVILEGE_H
#define PRIVILEGE_H

class Privilege {};

#endif // PRIVILEGE_H
